# ObsidianVideoNotesManager

./: .gitignore  README.md  config.toml.example  main.py  pyproject.toml  requirements.txt
yt_playlist_dl/: article.py  auth.py  cli.py  config.py  downloader.py  logger.py  obsidian.py  state.py  youtube.py
